--- a/doc/fr_FR/index.asciidoc
+++ b/doc/fr_FR/index.asciidoc
@@ -2,8 +2,7 @@
 
 === Description
 Plugin servant à creer des thèmes à partir de BootStrap
-Jeedom nous offre un mode Design qui permet de creer un mode de vue très libre, mais n'est pas abordable pour n'importe qui, le but de se plugin est de créer la
- structure compléte de votre mode Design, pour que les seuls actions à faire en mode Design soit le placement des widgets
+Jeedom nous offre un mode Design qui permet de creer un mode de vue très libre, mais n'est pas abordable pour n'importe qui, le but de se plugin est de créer la structure compléte de votre mode Design, pour que les seuls actions à faire en mode Design soit le placement des widgets
 
 .Attention
 ----
