--- a/doc/fr_FR/partie_2.asciidoc
+++ b/doc/fr_FR/partie_2.asciidoc
@@ -13,8 +13,8 @@ image::../images/popovemenu3.png[]
 Ce selecteur va permettre de définir la taille de la *barre de menu*
 
 TIP:
-En mode 'Haut' et 'Bas' cela correspond à la Hauteur
-en mode 'Gauche' et 'Droite' cela correspond à la Largeur
+En mode 'Haut' et 'Bas' cela correspond à la Hauteur.
+en mode 'Gauche' et 'Droite' cela correspond à la Largeur.
 
 image::../images/popovemenu4.png[]
 Nous avons ici un bouton et une entrée texte qui correspond au titre de la 
