--- a/doc/fr_FR/partie_2.asciidoc
+++ b/doc/fr_FR/partie_2.asciidoc
@@ -3,23 +3,20 @@ Dans cette partie nous allons entrer dans les détails, découpé chaque popover
 
 ==== Popover du Menu
 Le titre de ce popover indique les dimensions de la *barre de menu*
-image::../images/popovemenu1.png[]
+image:../images/popovemenu1.png[]
 
-Ce selecteur va permettre de définir de quel coté va être disposé la *barre de 
-menu*, quatre choix possible : 'Haut','Bas','Gauche','Droite'
-image::../images/popovemenu2.png[]
+Ce selecteur va permettre de définir de quel coté va être disposé la *barre de menu*, quatre choix possible : 'Haut','Bas','Gauche','Droite'
+image:../images/popovemenu2.png[]
 
 Ce selecteur va permettre de définir la taille de la *barre de menu*
-image::../images/popovemenu3.png[]
+image:../images/popovemenu3.png[]
 
 TIP:
 En mode 'Haut' et 'Bas' cela correspond à la Hauteur. ++
 en mode 'Gauche' et 'Droite' cela correspond à la Largeur.
 
-Nous avons ici un bouton et une entrée texte qui correspond au titre de la 
-*barre de menu*, le bouton permet de faire apparaître/disparaître le texte 
-configuré
-image::../images/popovemenu4.png[]
+Nous avons ici un bouton et une entrée texte qui correspond au titre de la *barre de menu*, le bouton permet de faire apparaître/disparaître le texte configuré
+image:../images/popovemenu4.png[]
 
 image::../images/popovemenu5.png[]
 
