--- a/doc/fr_FR/partie_2.asciidoc
+++ b/doc/fr_FR/partie_2.asciidoc
@@ -8,7 +8,7 @@ Le titre de ce popover indique les dimensions de la *barre de menu*
 image::../images/popovemenu2.png[]
 Ce selecteur va permettre de définir de quel coté va être disposé la *barre de menu*, quatre choix possible : 'Haut','Bas','Gauche','Droite'
 
-image:../images/popovemenu3.png[]
+image::../images/popovemenu3.png[]
 Ce selecteur va permettre de définir la taille de la *barre de menu*
 
 TIP:
@@ -18,12 +18,12 @@ en mode 'Gauche' et 'Droite' cela correspond à la Largeur.
 image::../images/popovemenu4.png[]
 Nous avons ici un bouton et une entrée texte qui correspond au titre de la *barre de menu*, le bouton permet de faire apparaître/disparaître le texte configuré
 
-image:../images/popovemenu5.png[]
+image::../images/popovemenu5.png[]
 
-image:../images/popovemenu6.png[]
+image::../images/popovemenu6.png[]
 
-image:../images/popovemenu7.png[]
+image::../images/popovemenu7.png[]
 
-image:../images/popovemenu8.png[]
+image::../images/popovemenu8.png[]
 
-image:../images/popovemenu9.png[]
+image::../images/popovemenu9.png[]
