--- a/doc/fr_FR/partie_2.asciidoc
+++ b/doc/fr_FR/partie_2.asciidoc
@@ -29,6 +29,7 @@ image::../images/popovemenu6.png[]
 Permet de valider l'option Mono-Cadre ou Multi-Cadres, en Mono-Cadre les pages secondaires n'auront q'un cadre unique, en mode Multi-Cadres, vous pourrez en créer autant que vous voulez sur les pages secondaires
 
 image::../images/popovemenu7.png[]
+Configuration des paramètres de Dimensions, Fonts et images de fonds<<Dimensions>>
 
 image::../images/popovemenu8.png[]
 
