--- a/doc/fr_FR/index.asciidoc
+++ b/doc/fr_FR/index.asciidoc
@@ -1,8 +1,10 @@
 == Thèmes
 
 === Description
-Plugin servant à creer des thèmes à partir de BootStrap
-Jeedom nous offre un mode Design qui permet de creer un mode de vue très libre, mais n'est pas abordable pour n'importe qui, le but de se plugin est de créer la structure compléte de votre mode Design, pour que les seuls actions à faire en mode Design soit le placement des widgets
+Plugin servant à creer des thèmes à partir de la librairie BootStrap
+Jeedom nous offre un mode Design qui permet de creer un mode de vue très libre, 
+mais n'est pas abordable pour n'importe qui, le but de se plugin est de créer la structure 
+compléte de votre mode Design, pour que les seuls actions à faire en mode Design soit le placement des widgets
 
 .Attention
 ----
@@ -11,7 +13,7 @@ le plugin ne va pas créer le mode design tout seul, il faut avant de commencer 
 
 '''
 === Création d'un thème Facile
-include::partie_1.asciidoc[]
+include::partie_1.asciidoc[Création d'un thème Facile]
 
 '''
 === Options avancées
