--- a/doc/fr_FR/partie_1.asciidoc
+++ b/doc/fr_FR/partie_1.asciidoc
@@ -1,2 +1,2 @@
-Nous allons commencer par créer un thème, cliquer sur 
+Nous allons commencer par créer un thème, cliquer sur: 
 image:../images/ajout.png[]
