--- a/doc/fr_FR/partie_2.asciidoc
+++ b/doc/fr_FR/partie_2.asciidoc
@@ -17,7 +17,10 @@ Ce selecteur va permettre de définir la taille de la *barre de menu*
 TIP:
 En mode 'Haut' et 'Bas' cela correspond à la Hauteur. +
 en mode 'Gauche' et 'Droite' cela correspond à la Largeur.
-...
+
+---
++
+---
 
 image::../images/popovemenu4.png[]
 Nous avons ici un bouton et une entrée texte qui correspond au titre de la *barre de menu*, le bouton permet de faire apparaître/disparaître le texte configuré
@@ -51,11 +54,11 @@ Configuration du style CSS voir <<Style>>
  +
  +
 
-[Dimensions]
+[[Dimensions]]
 ==== Popover de Dimensions
 
-[Boutons]
+[[Boutons]]
 ==== Popover de Boutons
 
-[Style]
+[[Style]]
 ==== Popover de Style
