--- a/doc/fr_FR/partie_2.asciidoc
+++ b/doc/fr_FR/partie_2.asciidoc
@@ -44,12 +44,12 @@ Configuration des paramètres de Dimensions, Fonts et image de fond voir <<dimen
  +
 
 image::../images/popovemenu8.png[]
-Configuration des paramètres des Boutons, des Menus ou des Ongles voir <<boutons, Popover de Boutons>>
+Configuration des paramètres des Boutons, des Menus ou des Ongles voir <<boutons,Popover de Boutons>>
  +
  +
 
 image::../images/popovemenu9.png[]
-Configuration du style CSS voir <<style, Popover de Style>>
+Configuration du style CSS voir <<styles,Popover de Style>>
  +
  +
 
@@ -61,6 +61,6 @@ Configuration du style CSS voir <<style, Popover de Style>>
 
 ==== Popover de Boutons
 
-[[style]] +
+[[styles]] +
 
 ==== Popover de Style
