--- a/doc/fr_FR/partie_2.asciidoc
+++ b/doc/fr_FR/partie_2.asciidoc
@@ -27,7 +27,7 @@ Nous avons ici un bouton et une entrée texte qui correspond au titre de la *bar
  
 image::../images/popovemenu5.png[]
 TIP:
-La barre d'état ne fournit qu'un link:http://getbootstrap.com/components/#breadcrumbs["breadcrumb"] pour le moment, elle permettra dans une version future de pouvoir controler l'état de certains virtuels (en cours de developpement).
+La barre d'état ne fournit qu'un link:http://getbootstrap.com/components/#breadcrumbs["breadcrumb"] pour le moment, elle permettra dans une version future de pouvoir visualiser l'état de certains virtuels (en cours de developpement).
 
 Valider ou non l'affichage de la barre d'état
  +
