--- a/doc/fr_FR/partie_2.asciidoc
+++ b/doc/fr_FR/partie_2.asciidoc
@@ -2,7 +2,7 @@ Dans cette partie nous allons entrer dans les détails, découpé chaque popover
 
 ==== Popover du Menu
 image::../images/popovemenu1.png[]
-Le titre de ce popover indique les dimensions de la *barre de menu*
+Le titre de ce popover indique les dimensions de la *barre de menu* +
  +
  +
 
@@ -18,11 +18,12 @@ Ce selecteur va permettre de définir la taille de la *barre de menu*
 TIP:
 En mode 'Haut' et 'Bas' cela correspond à la Hauteur. +
 en mode 'Gauche' et 'Droite' cela correspond à la Largeur.
- +
- +
+
++
++
 
 image::../images/popovemenu4.png[]
-Nous avons ici un bouton et une entrée texte qui correspond au titre de la *barre de menu*, le bouton permet de faire apparaître/disparaître le texte configuré
+Nous avons ici un bouton et une entrée texte qui correspond au titre de la *barre de menu*, le bouton permet de faire apparaître/disparaître le texte configuré +
  +
  +
 
@@ -31,8 +32,9 @@ Valider ou non l'affichage de la barre d'état
 
 TIP:
 La barre d'état ne fournit qu'un link:http://getbootstrap.com/components/#breadcrumbs["breadcrumb"] pour le moment, elle permettra dans une version future de pouvoir visualiser l'état de certains virtuels (en cours de developpement).
- +
- +
+
++
++
  
 image::../images/popovemenu6.png[]
 Permet de valider l'option Mono-Cadre ou Multi-Cadres, en Mono-Cadre les pages secondaires n'auront q'un cadre unique, en mode Multi-Cadres, vous pourrez en créer autant que vous voulez sur les pages secondaires
@@ -69,8 +71,9 @@ Permet de définir les dimensions de la page principale
 TIP:
 Les valeurs par défaut correspond à une tablette horizontale +
 [red]#Attention:# Ne pas confondre page(ou fenêtre) princiale et cadre principal
-  +
-  +
+
++
++
 
 image::../images/dimpopover3.png[]
 Permet de définir l'image de fonds, les images proviennent de la catégorie par défaut du <<gestImages,Gestionnaire d'images>>
@@ -81,17 +84,19 @@ image::../images/dimpopover4.png[]
 L'id du plan de la page principale du mode Design
 
 TIP:
-En mode read-only par défaut, passer en <<modeExpert,mode expert>>
- +
- +
+En mode read-only par défaut, passer en <<modeExpert,mode expert>>pour le modifier.
+
++
++
  
 image::../images/dimpopover5.png[]
 L'id du plan du cadre principal du mode Design
 
 TIP:
-En mode read-only par défaut, passer en <<modeExpert,mode expert>>
- +
- +
+En mode read-only par défaut, passer en <<modeExpert,mode expert>>pour le modifier.
+
++
++
 
  
 image::../images/dimpopover6.png[]
@@ -99,8 +104,9 @@ Gestionnaires des Fonts, appuyez sur le bouton *Font(s)...* pour en ajouter une,
 
 TIP:
 Selut les fonts du tyepe *TrueType*(.ttf) et *Web Open Font*(.woff) sont acceptées
- +
- +
+
++
++
  
 image::../images/dimpopover7.png[]
 Valider permet de revenir au <<popover-du-menu,popover Menu>>
@@ -112,22 +118,53 @@ Valider permet de revenir au <<popover-du-menu,popover Menu>>
 ==== Popover de Boutons
 
 image::../images/boutonpopover1.png[]
-
+Permet de choisir le type d'affichage 
+* Boutons: link:http://getbootstrap.com/css/#buttons["Classique"]
+* Onglets: voir link:http://getbootstrap.com/css/#nav-tabs["Nav Tabs"] 
+* Onglets: voir link:http://getbootstrap.com/css/#nav-pills["Nav Pills"] 
+ +
+ +
+  
 image::../images/boutonpopover2.png[]
-
+La taille des boutons
+____
+Ne s'applique pas aux Onglets ou Menus
+____
++
++ 
+ 
 image::../images/boutonpopover3.png[]
+La couleur du bouton Home
 
 image::../images/boutonpopover4.png[]
+Passe en mode justifié(1) pour les Onglets et Menus +
+(1) les boutons prendrons toute la taille de la *barre de menu*
+ +
+ +
 
 image::../images/boutonpopover5.png[]
+Permet d'utiliser le format groupé pour les boutons
+____
+Ne s'applique pas aux Onglets ou Menus
+____
++
++ 
 
 image::../images/boutonpopover6.png[]
+Permet de décaler les boutons sur la *barre de menu*
+ +
+ +
 
 image::../images/boutonpopover7.png[]
+Le premier bouton permet d'<<ajoutBouton,ajouter un bouton>>, le suivant d'éditer le bouton indiquer par le sélecteur
 
 image::../images/boutonpopover8.png[]
+permet de re-classer les boutons dans l'ordre que l'on veut
 
 image::../images/boutonpopover9.png[]
+Valider permet de revenir au <<popover-du-menu,popover Menu>>
+ +
+ +
 
 [[styles]] +
 
@@ -140,4 +177,7 @@ image::../images/stylepopover2.png[]
 image::../images/stylepopover3.png[]
 
 image::../images/stylepopover4.png[]
+Valider permet de revenir au <<popover-du-menu,popover Menu>>
+ +
+ +
 
