--- a/doc/fr_FR/partie_2.asciidoc
+++ b/doc/fr_FR/partie_2.asciidoc
@@ -2,18 +2,18 @@ Dans cette partie nous allons entrer dans les détails, découpé chaque popover
 
 ==== Popover du Menu
 image::../images/popovemenu1.png[]
-Le titre de ce popover indique les dimensions de la *barre de menu* +
+Le titre de ce popover indique les dimensions de la *barre de menu*. +
  +
  +
 
 image::../images/popovemenu2.png[]
-Ce selecteur va permettre de définir de quel coté va être disposé la *barre de menu*, quatre choix possible : 'Haut','Bas','Gauche','Droite'
+Ce selecteur va permettre de définir de quel coté va être disposé la *barre de menu*, quatre choix possible : 'Haut','Bas','Gauche','Droite'.
  +
  +
 
 image::../images/popovemenu3.png[]
 
-Ce selecteur va permettre de définir la taille de la *barre de menu*
+Ce selecteur va permettre de définir la taille de la *barre de menu*.
 
 TIP:
 En mode 'Haut' et 'Bas' cela correspond à la Hauteur. +
@@ -22,12 +22,12 @@ en mode 'Gauche' et 'Droite' cela correspond à la Largeur.
 +
 
 image::../images/popovemenu4.png[]
-Nous avons ici un bouton et une entrée texte qui correspond au titre de la *barre de menu*, le bouton permet de faire apparaître/disparaître le texte configuré +
+Nous avons ici un bouton et une entrée texte qui correspond au titre de la *barre de menu*, le bouton permet de faire apparaître/disparaître le texte configuré. +
  +
  +
 
 image::../images/popovemenu5.png[]
-Valider ou non l'affichage de la barre d'état
+Valider ou non l'affichage de la barre d'état.
 
 TIP:
 La barre d'état ne fournit qu'un link:http://getbootstrap.com/components/#breadcrumbs["breadcrumb"] pour le moment, elle permettra dans une version future de pouvoir visualiser l'état de certains virtuels (en cours de developpement).
@@ -35,22 +35,22 @@ La barre d'état ne fournit qu'un link:http://getbootstrap.com/components/#bread
 +
  
 image::../images/popovemenu6.png[]
-Permet de valider l'option Mono-Cadre ou Multi-Cadres, en Mono-Cadre les pages secondaires n'auront q'un cadre unique, en mode Multi-Cadres, vous pourrez en créer autant que vous voulez sur les pages secondaires
+Permet de valider l'option Mono-Cadre ou Multi-Cadres, en Mono-Cadre les pages secondaires n'auront q'un cadre unique, en mode Multi-Cadres, vous pourrez en créer autant que vous voulez sur les pages secondaires.
  +
  +
  
 image::../images/popovemenu7.png[]
-Configuration des paramètres de Dimensions, Fonts et image de fond voir <<dimensions, Popover de Dimensions>>
+Configuration des paramètres de Dimensions, Fonts et image de fond voir <<dimensions, Popover de Dimensions>>.
  +
  +
  
 image::../images/popovemenu8.png[]
-Configuration des paramètres des Boutons, des Menus ou des Ongles voir <<boutons,Popover de Boutons>>
+Configuration des paramètres des Boutons, des Menus ou des Ongles voir <<boutons,Popover de Boutons>>.
  +
  +
  
 image::../images/popovemenu9.png[]
-Configuration du style CSS voir <<styles,Popover de Style>>
+Configuration du style CSS voir <<styles,Popover de Style>>.
  +
  +
  
@@ -59,26 +59,26 @@ Configuration du style CSS voir <<styles,Popover de Style>>
 ==== Popover de Dimensions
 
 image::../images/dimpopover1.png[]
-Le titre de ce popover fournit les dimensions du cadre principal
+Le titre de ce popover fournit les dimensions du cadre principal.
  +
  +
  
 image::../images/dimpopover2.png[]
-Permet de définir les dimensions de la page principale
+Permet de définir les dimensions de la page principale.
 
 TIP:
-Les valeurs par défaut correspond à une tablette horizontale +
-[red]#Attention:# Ne pas confondre page(ou fenêtre) principale et cadre principal
+Les valeurs par défaut correspond à une tablette horizontale. +
+[red]#Attention:# Ne pas confondre page(ou fenêtre) principale et cadre principal.
 
 +
 
 image::../images/dimpopover3.png[]
-Permet de définir l'image de fonds, les images proviennent de la catégorie par défaut du <<gestImages,Gestionnaire d'images>>
+Permet de définir l'image de fond, les images proviennent de la catégorie par défaut du <<gestImages,Gestionnaire d'images>>.
  +
  +
 
 image::../images/dimpopover4.png[]
-L'id du plan de la page principale du mode Design
+L'id du plan de la page principale du mode Design.
 
 TIP:
 En mode read-only par défaut, passer en <<modeExpert,mode expert>> pour le modifier.
@@ -86,7 +86,7 @@ En mode read-only par défaut, passer en <<modeExpert,mode expert>> pour le modi
 +
  
 image::../images/dimpopover5.png[]
-L'id du plan du cadre principal du mode Design
+L'id du plan du cadre principal du mode Design.
 
 TIP:
 En mode read-only par défaut, passer en <<modeExpert,mode expert>> pour le modifier.
@@ -95,15 +95,15 @@ En mode read-only par défaut, passer en <<modeExpert,mode expert>> pour le modi
 
  
 image::../images/dimpopover6.png[]
-Gestionnaires des Fonts, appuyez sur le bouton *Font(s)...* pour en ajouter une, appuyer sur le bouton *Selection* pour en effacer une, le selecteur défini celle qui sera appliqué à la page principale
+Gestionnaires des Fonts, appuyez sur le bouton *Font(s)...* pour en ajouter une, appuyer sur le bouton *Selection* pour en effacer une, le selecteur défini celle qui sera appliqué à la page principale.
 
 TIP:
-Seul les Fonts du type *TrueType*(.ttf) et *Web Open Font*(.woff) sont acceptées
+Seul les Fonts du type *TrueType*(.ttf) et *Web Open Font*(.woff) sont acceptées.
 
 +
  
 image::../images/dimpopover7.png[]
-Valider permet de revenir au <<popover-du-menu,popover Menu>>
+Valider permet de revenir au <<popover-du-menu,popover Menu>>.
  +
  +
 
@@ -113,74 +113,81 @@ Valider permet de revenir au <<popover-du-menu,popover Menu>>
 
 image::../images/boutonpopover1.png[]
 Permet de choisir le type d'affichage 
-* Boutons: link:http://getbootstrap.com/css/#buttons["Classique"]
-* Onglets: voir link:http://getbootstrap.com/css/#nav-tabs["Nav Tabs"] 
-* Onglets: voir link:http://getbootstrap.com/css/#nav-pills["Nav Pills"] 
+
+* Boutons: link:http://getbootstrap.com/css/#buttons["Classique"].
+* Onglets: voir link:http://getbootstrap.com/css/#nav-tabs["Nav Tabs"] .
+* Onglets: voir link:http://getbootstrap.com/css/#nav-pills["Nav Pills"] .
  +
  +
   
 image::../images/boutonpopover2.png[]
-La taille des boutons
+La taille des boutons.
 ____
-Ne s'applique pas aux Onglets ou Menus
+Ne s'applique pas aux Onglets ou Menus.
 ____
 +
 + 
  
 image::../images/boutonpopover3.png[]
-La couleur du bouton Home
+La couleur du bouton Home.
 
 image::../images/boutonpopover4.png[]
-Passe en mode justifié(1) pour les Onglets et Menus +
-(1) les boutons prendrons toute la taille de la *barre de menu*
+Passe en mode justifié(1) pour les Onglets et Menus. +
+(1) les boutons prendrons toute la taille de la *barre de menu*.
  +
  +
 
 image::../images/boutonpopover5.png[]
-Permet d'utiliser le format groupé pour les boutons
+Permet d'utiliser le format groupé pour les boutons.
 ____
-Ne s'applique pas aux Onglets ou Menus
+Ne s'applique pas aux Onglets ou Menus.
 ____
 +
 + 
 
 image::../images/boutonpopover6.png[]
-Permet de décaler les boutons sur la *barre de menu*
+Permet de décaler les boutons sur la *barre de menu*. +
+Il suffit de cliquer et glisser le bouton à l'emplacement désirer, cliquez sur *Valider* pour valider les modifications.
  +
  +
 
 image::../images/boutonpopover7.png[]
-Le premier bouton permet d'<<ajoutBouton,ajouter un bouton>>, le suivant d'éditer le bouton indiquer par le sélecteur
+Le premier bouton permet d'<<ajoutBouton,ajouter un bouton>>, le suivant d'éditer le bouton indiquer par le sélecteur.
 
 image::../images/boutonpopover8.png[]
-permet de re-classer les boutons dans l'ordre que l'on veut
+permet de re-classer les boutons dans l'ordre que l'on veut.
 
 image::../images/boutonpopover9.png[]
-Valider permet de revenir au <<popover-du-menu,popover Menu>>
+Valider permet de revenir au <<popover-du-menu,popover Menu>>.
  +
  +
+
+[[ajoutBouton]] +
+
+===== Ajout/Edition d'un Bouton
+image:../images/creabouton.png[] image:../images/editbouton.png[]
 
 [[styles]] +
 
 ==== Popover de Style
 
 image::../images/stylepopover1.png[]
-La case à cocher sert à utiliser ces propres couleurs pour le texte et le fond si elle est cocher sinon les couleurs du profil Jeedom seront utilisées
+La case à cocher sert à utiliser ces propres couleurs pour le texte et le fond si elle est cocher sinon les couleurs du profil Jeedom seront utilisées.
  +
  +
 
 image::../images/stylepopover2.png[]
-Définit la configuration des bordures pour la *barre de menu* le cadre principale, la barre d'état et les pages secondaires
+Définit la configuration des bordures pour la *barre de menu* le cadre principale, la barre d'état et les pages secondaires.
  +
  +
 
 image::../images/stylepopover3.png[]
-Définit la configuration de l'ombre pour la *barre de menu* le cadre principale, la barre d'état et les pages secondaires
+Définit la configuration de l'ombre pour la *barre de menu* le cadre principale, la barre d'état et les pages secondaires.
  +
  +
 
 image::../images/stylepopover4.png[]
-Valider permet de revenir au <<popover-du-menu,popover Menu>>
+Valider permet de revenir au <<popover-du-menu,popover Menu>>.
  +
  +
 
