--- a/doc/fr_FR/partie_1.asciidoc
+++ b/doc/fr_FR/partie_1.asciidoc
@@ -4,7 +4,11 @@ Pour commencer nous allons définir la nature de notre projet :
 * Nous adopterons le format Tablette horizontale (paramètres par défaut).
 * La barre de menu sera situé en 'Haut' (paramètres par défaut).
 * Barre d'état apparente (paramètres par défaut).
-* les entrées de la barre de menu seront des Boutons (paramètres par défaut).
+* Les entrées de la barre de menu seront des Boutons (paramètres par défaut).
 * Le design comportera 3 Pièces composé comme suis: RdC (Salon, Cuisine), Chambre
+* Mono-cadre
+* On configura un style avec une bordure et une ombre pour un rendu visuel
 
-Nous allons commencer par créer un thème, cliquer sur: image:../images/ajout.png[]
+Nous allons commencer par créer un thème, cliquer sur: image:../images/ajout.png[] +
+Le thème que nous désirons et pratiquement créer, ils nous restent plus qu'a configurer les boutons et le style. +
+Cliquez sur *Boutons* et appuyez sur image:../images/plus.png[] pour créer un nouveau bouton, notre premier bouton est un sous-menu 
