--- a/doc/fr_FR/partie_1.asciidoc
+++ b/doc/fr_FR/partie_1.asciidoc
@@ -10,5 +10,20 @@ Pour commencer nous allons définir la nature de notre projet :
 * On configura un style avec une bordure et une ombre pour un rendu visuel
 
 Nous allons commencer par créer un thème, cliquer sur: image:../images/ajout.png[] +
-Le thème que nous désirons et pratiquement créer, ils nous restent plus qu'a configurer les boutons et le style. +
-Cliquez sur *Boutons* et appuyez sur image:../images/plus.png[] pour créer un nouveau bouton, notre premier bouton est un sous-menu 
+Changeons le titre pour un message de bienvenue, remplacez dans le premier popover +Menu+ par +Bienvenue dans Notre Espace Domotique+. +
+Le thème que nous désirons et pratiquement créer, ils nous restent plus qu'a configurer les <<ajoutedition-dun-bouton,boutons>> et le <<popover-du-style,style>>. +
+Cliquez sur *Boutons* et appuyez sur image:../images/plus.png[] pour créer un nouveau bouton. +
+Notre premier bouton est un sous-menu, entrez +RdC+ dans le champs *Nom* et cliquez sur *Sous-menu* pour affichez les sous-entrée, cliquez sur image:../images/ajout.png[] pour ajouter une autre sous-entrée, remplissez chaque entrée par +Salon+ et +Cuisine+ puis validez, notre premier bouton est créé. +
+Le deuxième bouton est plus simple entrez +Chambre+ dans le champ *Nom* et validez. +
+
+Maintenant que nos boutons sont créés, nous allons appliquez un style pour un meilleur rendu visuel, ici chacun fait ce qu'il veut, pour notre démo j'ai choist les paramètres ainsi :
+
+* Bordure : *Taille*: +5+, *Rayon*: +5+, *Style*: +groove+, *Couleur*: +Bleu+
+* Ombre : *Taille*: +10, +10+, +10+, *Couleur*: +Bleu Clair+
+
+Sauvegadez votre thème maintenant. +
+
+Voici le résultat:
+image::../images/demo1.png[]
+le fichier du thème qu'il est possible d'importer voir <<importexport,Importer/Exporter>> :
+link:../images/demo.thm[Demo]
