--- a/doc/fr_FR/partie_1.asciidoc
+++ b/doc/fr_FR/partie_1.asciidoc
@@ -19,7 +19,7 @@ Le deuxième bouton est plus simple entrez +Chambre+ dans le champ *Nom* et vali
 Maintenant que nos boutons sont créés, nous allons appliquez un style pour un meilleur rendu visuel, ici chacun fait ce qu'il veut, pour notre démo j'ai choist les paramètres ainsi :
 
 * Bordure : *Taille*: +5+, *Rayon*: +5+, *Style*: +groove+, *Couleur*: +Bleu+
-* Ombre : *Taille*: +10, +10+, +10+, *Couleur*: +Bleu Clair+
+* Ombre : *Taille*: +10+, +10+, +10+, *Couleur*: +Bleu Clair+
 
 Sauvegadez votre thème maintenant. +
 
